--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ highlighter: pygments # default python pygments have been replaced by pygments.r
 paginate: 10          # Posts per page on the blog index
 paginate_path: "posts/:num"  # Directory base for pagination URLs eg. /posts/2/
 recent_posts: 5       # Posts in the sidebar Recent Posts section
-excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
+excerpt_link: "Read on"  # "Continue reading" link text at the bottom of excerpted articles
 excerpt_separator: "<!--more-->"
 
 titlecase: true       # Converts page and post titles to titlecase
@@ -99,6 +99,11 @@ google_analytics_tracking_id: UA-66445219-1
 
 # Facebook Like
 facebook_like: false
+
+social:
+  twitter: https://twitter.com/nshintio
+  github: https://github.com/nshintio/
+  rss: http://nshint.io/atom.xml
 
 author_ids: [matt, woj, rafa, marcin, kondrat]
 authors: 
