update Wojtek's twitter account

--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ authors:
    wojtek:
       display_name: Wojciech Łukaszuk
       email: wojtek@nshint.io
-      twitter: wojteklukaszuk
+      twitter: wojteklu
       github: wojteklukaszuk
    rafa:
       display_name: Rafael Machado
