--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://nshint.io
+url: http://nshintio.github.io
 title: NSHint
 subtitle:
 author: NSHint
