--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ facebook_like: false
 social:
   twitter: https://twitter.com/nshintio
   github: https://github.com/nshint/
-  rss: http://nshint.io/atom.xml
+  rss: https://nshint.github.io/atom.xml
 
 author_ids: [matt, woj, rafa, marcin, kondrat]
 authors:
