Update Mateusz's email

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author_ids: [matt, woj, rafa, marcin, kondrat]
 authors:
    matt:
       display_name: Mateusz Matoszko
-      email: mateusz@nshint.io
+      email: nshint@matoszko.pl
       twitter: mmatoszko
       github: mmatoszko
    wojtek:
